--- a/src/app/pages/materials-inventory/materials-inventory.component.html
+++ b/src/app/pages/materials-inventory/materials-inventory.component.html
@@ -1,1 +1,22 @@
-<p>materials-inventory works!</p>
+<div style="padding:16px;">
+  <h3 style="margin-bottom:18px;">Báo cáo tồn kho</h3>
+  <div *ngIf="loading" style="color:#1976d2;font-weight:500;">Đang tải dữ liệu...</div>
+  <table *ngIf="!loading" class="table-inventory">
+    <thead>
+      <tr>
+        <th>Mã vật tư</th>
+        <th>Tên vật tư</th>
+        <th>Tồn kho</th>
+        <th>Vị trí</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of inventoryList">
+        <td>{{item.code}}</td>
+        <td>{{item.name}}</td>
+        <td>{{item.qty}}</td>
+        <td>{{item.location}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
