--- a/src/app/pages/materials-inventory/materials-inventory.component.scss
+++ b/src/app/pages/materials-inventory/materials-inventory.component.scss
@@ -3,13 +3,21 @@
   border-collapse: collapse;
   margin-top: 14px;
   background: #fff;
+  box-shadow: 0 2px 8px #e3e3e3;
 }
+
 .table-inventory th, .table-inventory td {
   border: 1px solid #ddd;
   padding: 8px 6px;
   text-align: center;
 }
+
 .table-inventory th {
   background: #2196f3;
   color: #fff;
+  font-weight: 500;
+}
+
+.table-inventory tr:nth-child(even) {
+  background: #f6f9fd;
 }
