--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="card">
-          <div class="card-header card-header-danger">
+          <div class="card-header card-header-info">
             <h4 class="card-title">Warehouse Layout</h4>
             <p class="card-category">Find item location in the warehouse</p>
           </div>
@@ -15,7 +15,7 @@
                 </mat-form-field>
               </div>
               <div class="col-md-6">
-                <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="search(searchInput.value)">Search</button>
+                <button mat-raised-button type="submit" class="btn btn-info pull-right" (click)="search(searchInput.value)">Search</button>
               </div>
             </div>
             
