--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -1,6 +1,8 @@
 <div class="main-content">
   <div class="container-fluid">
-    <div class="card">
+
+    <!-- Document List View -->
+    <div *ngIf="!selectedDocumentUrl" class="card">
       <div class="card-header card-header-info">
         <h4 class="card-title">Danh sách tài liệu</h4>
         <p class="card-category">Chọn một tài liệu để mở và điền thông tin.</p>
@@ -12,12 +14,29 @@
               <div class="card-body">
                 <h6 class="card-category">{{ doc.category }}</h6>
                 <h5 class="card-title">{{ doc.title }}</h5>
-                <button (click)="openDocument(doc.url)" class="btn btn-info">Mở tài liệu</button>
+                <button (click)="selectDocument(doc)" class="btn btn-info">Mở tài liệu</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Embedded Document View -->
+    <div *ngIf="selectedDocumentUrl" class="card">
+      <div class="card-header card-header-info d-flex align-items-center">
+        <button (click)="closeDocument()" class="btn btn-white btn-round btn-just-icon mr-3">
+          <i class="material-icons">arrow_back</i>
+        </button>
+        <div>
+          <h4 class="card-title mb-0">Điền thông tin</h4>
+          <p class="card-category">Hoàn thành biểu mẫu và nhấn nút quay lại.</p>
+        </div>
+      </div>
+      <div class="card-body">
+        <iframe [src]="selectedDocumentUrl" width="100%" height="650px" frameborder="0">Đang tải...</iframe>
+      </div>
+    </div>
+
   </div>
 </div>
