--- a/src/app/pages/documents/documents.component.html
+++ b/src/app/pages/documents/documents.component.html
@@ -11,8 +11,7 @@
         <div class="row">
           <div *ngFor="let doc of documentList" class="col-md-4">
             <div class="card">
-              <div class="card-body">
-                <h6 class="card-category">{{ doc.category }}</h6>
+              <div class="card-body text-center">
                 <h5 class="card-title">{{ doc.title }}</h5>
                 <button (click)="selectDocument(doc)" class="btn btn-info">Mở tài liệu</button>
               </div>
